@@ -2,7 +2,8 @@ GFAL2 RELEASE-NOTES:
 
 * Tue Jun 08 2015 Alejandro Alvarez <aalvarez at cern.ch> - 2.9.3
 ** Bug
-- [DMC-682] - SURLS in responses may not contain full endpoint
+- [DMC-682] - SRM Plugin: SURLS in responses may not contain full endpoint
+- [DMC-676] - SRM Plugin: Response for poll may be shorter too
 
 * Mon Jun 01 2015 Alejandro Alvarez <aalvarez at cern.ch> - 2.9.2
 ** Bug
